--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Getting Started</title>
-    <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
-  </head>
-  <body>
-    <!-- <script src="./src/index.js"></script> -->
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Getting Started</title>
+  <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
+</head>
+
+<body>
+  <!-- <script src="./src/index.js"></script> -->
+  <span class="icon iconfont icon-gongyi"></span>
+</body>
+
 </html>
