--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,21 @@
 <head>
     <meta charset="utf-8" />
     <title>Getting Started</title>
-    <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
+    <script>
+        const modernBrowser = 'fetch' in window && 'assign' in Object;
+
+        if (!modernBrowser) {
+            const scriptElement = document.createElement('script');
+
+            scriptElement.async = false;
+            scriptElement.src = '/polyfills.bundle.js';
+            document.head.appendChild(scriptElement);
+        }
+    </script>
 </head>
 
 <body>
+    <script src="index.bundle.js"></script>
 </body>
 
 </html>
