--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ CN">
 
 <body>
     <div id="app"></div>
-    <p>npx webpack --entry=./index.js --output-filename=main.js --mode=development</p>
-    <script src="./dist/main.js"></script>
+    <script src="./dist/index.js"></script>
 </body>
 
 </html>
